[PN-14793] Refactored tests and removed unused dto